--- a/index.html
+++ b/index.html
@@ -155,10 +155,9 @@
                         <span>Junior Frontend & Software Engineer</span>
                     </div>
                     <ul class="social-icon">
-                        <li><a href="#" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#" target="_blank" class="github"><i class="fa fa-github"></i></a></li>
+                        <li><a href="https://www.facebook.com/owenadira" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/owezzy/" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://github.com/owezzy" target="_blank" class="github"><i class="fa fa-github"></i></a></li>
                     </ul>
                 </div>
             </div><!--profile pic with link to social media-->
@@ -548,10 +547,9 @@
 
             <div class="col-md-12">
                 <ul class="social-icon margin-bottom-30">
-                    <li><a href="#" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#" target="_blank" class="github"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://www.facebook.com/owenadira" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/owezzy" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/owezzy" target="_blank" class="github"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
 
