--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- SEO -->
     <meta name="description" content="150 words">
     <meta name="author" content="Owen Adira">
-    <meta name="url" content="http://www.owezzy.io">
+    <meta name="url" content="http://www.owezzy.github.io">
     <meta name="copyright" content="AK TECH">
     <meta name="robots" content="index,follow">
 
@@ -135,7 +135,7 @@
                         <table class="table">
                             <tr>
                                 <td>Resume</td>
-                                <td style="background-color: #f7639a;"><a
+                                <td style="background-color: #f72332;"><a
                                         href="images/React,%20%20Up%20&%20Running%20-%20Stoyan%20Stefanov,%20O'Reilly.pdf"
                                         target="_blank" data-toggle="tooltip" data-placement="top"
                                         title="Check Out My Resume">Resume.pdf</a></td>
@@ -255,9 +255,9 @@
             <div class="col-md-2">
                 <ul class="portfolio">
                     <li class="filter" data-filter="all">all</li>
-                    <li class="filter" data-filter=".apps">apps</li>
-                    <li class="filter" data-filter=".mockups">mockups</li>
-                    <li class="filter" data-filter=".wordpress">wordpress</li>
+                    <li class="filter" data-filter=".mobileapp">Mobileapps</li>
+                    <li class="filter" data-filter=".webbapp">WebApps</li>
+                    <li class="filter" data-filter=".website">Websites</li>
                 </ul>
             </div>
 
@@ -356,7 +356,7 @@
                     <div class="statistics-icon"><i class="icon-hourglass"></i>
                     </div>
                     <div class="statistics-content">
-                        <h5><span data-count="10000" class="statistics-count">10000</span></h5>
+                        <h5><span data-count="10000" class="statistics-count">10000+</span></h5>
                         <span>Hours of Work</span>
                     </div>
                 </div>
@@ -554,7 +554,7 @@
             </div>
 
             <div class="col-md-12 uipasta-credit">
-                <p>Design By <a href="http://www.owezzy.io" target="_blank" title="Owen Adirah">Owezzy</a></p>
+                <p>Design By <a href="http://www.owezzy.github.io" target="_blank" title="Owen Adirah">Owezzy</a></p>
             </div>
 
         </div>
