--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             Coding Skills</b></a></p>
                     <a href="https://app.plum.io/profile/owen_adira" target="_blank"><strong>Checkout my Plum test
                         Profile</strong></a><br>
-                    </n>
+                    <br>
                     <div class="table-responsive">
                         <table class="table">
                             <tr>
@@ -184,7 +184,7 @@
                             <div class="divider dark">
                                 <i class="icon-energy"></i>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                            <p>My programming skills can be rated as follows</p>
                         </div>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
                 <div class="row">
                     <div class="col-sm-offset-2 col-xs-offset-0 col-md-8 col-sm-8">
 
-                        <div class="my-skill margin-bottom-50">
+                        <div class="my-skill margin-bottom-50 ">
                             <strong>Graphic Design</strong>
                             <span class="pull-right">80%</span>
                             <div class="progress">
