update portfolio slides favicon

--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
         </div>
 
     </div>
-    </div>
 </section>
 
 <!-- Skills Modal Start -->
@@ -192,8 +191,8 @@
                 <div class="row">
                     <div class="col-sm-offset-2 col-xs-offset-0 col-md-8 col-sm-8">
 
-                        <div class="my-skill margin-bottom-50 ">
-                            <strong>Graphic Design</strong>
+                        <div class="my-skill margin-bottom-50 " >
+                            <strong >Graphic Design</strong>
                             <span class="pull-right">80%</span>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="85"
@@ -257,7 +256,7 @@
                 <ul class="portfolio">
                     <li class="filter" data-filter="all">all</li>
                     <li class="filter" data-filter=".mobileapp">Mobileapps</li>
-                    <li class="filter" data-filter=".webbapp">WebApps</li>
+                    <li class="filter" data-filter=".webapp">WebApps</li>
                     <li class="filter" data-filter=".website">Websites</li>
                 </ul>
             </div>
@@ -266,25 +265,25 @@
                 <div class="portfolio-inner margin-top-30">
 
 
-                    <div class="col-md-4 col-sm-6 col-xs-12 mix apps">
+                    <div class="col-md-4 col-sm-6 col-xs-12 mix apps webapp">
                         <div class="item">
-                            <a href="images/portfolio/1.jpg" class="portfolio-popup" title="Project Title">
+                            <a href="images/portfolio/1.jpg" class="portfolio-popup" title="Angular Accounts Payable dasboard">
                                 <img src="images/portfolio/1.jpg" alt="">
                             </a>
                         </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-6 col-xs-12 mix mockups">
+                    <div class="col-md-4 col-sm-6 col-xs-12 mix website">
                         <div class="item">
-                            <a href="images/portfolio/2.jpg" class="portfolio-popup" title="Project Title">
+                            <a href="images/portfolio/2.jpg" class="portfolio-popup" title="Personal Resume Website">
                                 <img src="images/portfolio/2.jpg" alt="">
                             </a>
                         </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-6 col-xs-12 mix apps">
+                    <div class="col-md-4 col-sm-6 col-xs-12 mix mobileapp">
                         <div class="item">
-                            <a href="images/portfolio/3.jpg" class="portfolio-popup" title="Project Title">
+                            <a href="images/portfolio/3.jpg" class="portfolio-popup" title="Shopping List Mobile App (CRUD)">
                                 <img src="images/portfolio/3.jpg" alt="">
                             </a>
                         </div>
