--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div class="divider dark">
                         <i class="icon-picture"></i>
                     </div>
-                    <p>All my projects can are hosted at <a href="https://github.com/owezzy" target="_blank"> <strong>github</strong></a> in public repositories;</p>
+                    <p>All my projects are hosted at <a href="https://github.com/owezzy" target="_blank"> <strong>github</strong></a> in public repositories;</p>
                 </div>
             </div>
         </div>
