--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <tr>
                                 <td>Resume</td>
                                 <td style="background-color: #f72332;"><a
-                                        href="images/React,%20%20Up%20&%20Running%20-%20Stoyan%20Stefanov,%20O'Reilly.pdf"
+                                        href="images/owen%20adira%20resume%20letter.pdf"
                                         target="_blank" data-toggle="tooltip" data-placement="top"
                                         title="Check Out My Resume">Resume.pdf</a></td>
                             </tr>
