update about me

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                         development.My skills are based Python and JavaScript programming, frontend development using
                         Bootsrap4 with Sass in Javascript frameworks like Angular and React.Backend environments i
                         have experience with include NodeJs and Django .Am also acquainted with Cross-platform
-                        Mobile development using apache cordova with ionic framework, data analysis using python and
-                        data visualisation using D3 javascript library.Apart from having my nose stuck in front of a
+                        Mobile development using apache cordova with ionic framework,  data visualisation using D3 javascript library.Apart from having my nose stuck in front of a
                         computer i enjoy listening to music, playing basketball and pencil artwork.
                         <br><a href="#" data-toggle="modal" data-target="#skillmodal" title="My Skills"><b>Checkout my
                             Coding Skills</b></a></p>
