--- a/index.html
+++ b/index.html
@@ -290,16 +290,16 @@
 
                     <div class="col-md-4 col-sm-6 col-xs-12 mix mockups wordpress">
                         <div class="item">
-                            <a href="images/portfolio/4.jpg" class="portfolio-popup" title="Project Title">
-                                <img src="images/portfolio/4.jpg" alt="">
+                            <a href="images/portfolio/4.jpg" class="portfolio-popup" title="Work in Progress">
+                                <img src="images/portfolio/django.png" alt="">
                             </a>
                         </div>
                     </div>
 
                     <div class="col-md-4 col-sm-6 col-xs-12 mix wordpress apps">
                         <div class="item">
-                            <a href="images/portfolio/5.jpg" class="portfolio-popup" title="Project Title">
-                                <img src="images/portfolio/5.jpg" alt="">
+                            <a href="images/portfolio/5.jpg" class="portfolio-popup" title="Work in Progress">
+                                <img src="images/portfolio/react.png" alt="">
                             </a>
                         </div>
                     </div>
