more images for portfolio

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
                     <li class="filter" data-filter=".mobileapp">Mobileapps</li>
                     <li class="filter" data-filter=".webapp">WebApps</li>
                     <li class="filter" data-filter=".website">Websites</li>
+                    <li class="filter" data-filter=".badge">Badges</li>
                 </ul>
             </div>
 
@@ -264,7 +265,7 @@
                 <div class="portfolio-inner margin-top-30">
 
 
-                    <div class="col-md-4 col-sm-6 col-xs-12 mix apps webapp">
+                    <div class="col-md-4 col-sm-6 col-xs-12 mix webapp">
                         <div class="item">
                             <a href="images/portfolio/1.jpg" class="portfolio-popup" title="Angular Accounts Payable dasboard">
                                 <img src="images/portfolio/1.jpg" alt="">
@@ -288,30 +289,43 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-6 col-xs-12 mix mockups wordpress">
+                    <div class="col-md-4 col-sm-6 col-xs-12 mix webapp">
                         <div class="item">
                             <a href="images/portfolio/4.jpg" class="portfolio-popup" title="Work in Progress">
-                                <img src="images/portfolio/django.png" alt="">
+                                <img src="images/portfolio/django.jpg" alt="">
                             </a>
                         </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-6 col-xs-12 mix wordpress apps">
+                    <div class="col-md-4 col-sm-6 col-xs-12 mix webapp">
                         <div class="item">
                             <a href="images/portfolio/5.jpg" class="portfolio-popup" title="Work in Progress">
-                                <img src="images/portfolio/react.png" alt="">
+                                <img src="images/portfolio/react.jpg" alt="">
                             </a>
                         </div>
                     </div>
 
-                    <div class="col-md-4 col-sm-6 col-xs-12 mix apps mockups wordpress" title="Project Title">
+                    <div class="col-md-4 col-sm-6 col-xs-12 mix  badge" title="Big Data Foundation">
                         <div class="item">
-                            <a href="images/portfolio/6.jpg" class="portfolio-popup">
-                                <img src="images/portfolio/6.jpg" alt="">
+                            <a href="images/portfolio/big-data-foundations-level-1.png" class="portfolio-popup">
+                                <img src="images/portfolio/big-data-foundations-level-1.png" alt="">
                             </a>
                         </div>
                     </div>
-
+                    <div class="col-md-4 col-sm-6 col-xs-12 mix  badge" title="Data Science Foundation">
+                        <div class="item">
+                            <a href="images/portfolio/data-science-foundations-level-1.png" class="portfolio-popup">
+                                <img src="images/portfolio/data-science-foundations-level-1.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12 mix badge" title="Data Science For Business ">
+                    <div class="item">
+                        <a href="images/portfolio/data-science-for-business-level-1.png" class="portfolio-popup">
+                            <img src="images/portfolio/data-science-for-business-level-1.png" alt="">
+                        </a>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
