--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" type="image/png" href="/dist/img/favicon/favicon.ico" />
+    <link rel="shortcut icon" type="image/png" href="/docs/img/favicon/favicon.ico" />
     <title>Contact Me</title>
 </head>
 
@@ -48,7 +48,7 @@
                 </li>
                 <li class="nav-item current">
                     <a href="contact.html" class="nav-link">
-                        Cotact Me
+                        Contact Me
                     </a>
                 </li>
             </ul>
@@ -80,7 +80,7 @@
 
     </main>
     <footer id="main-footer">
-        Owezzy &copy; 2018
+        Owezzy &copy; 2021
     </footer>
     <script src="js/main.js"></script>
 </body>
